--- a/src/index.scss
+++ b/src/index.scss
@@ -102,9 +102,10 @@ body {
 
   #main-section {
     width: 100%;
-    min-height: 80%;
+    min-height: 100%;
     padding: 0;
     position: relative;
+    margin-bottom: 50px;
   }
 
   #content-section {
@@ -114,7 +115,6 @@ body {
     margin: 0 auto;
     z-index: 5;
     padding: 5px 20px 30px;
-
     box-shadow: 0px 9px 20px -10px rgba(128, 128, 128, 0.541);
     border-radius: 10px;
 
